<resources>
    <string name="app_name">TechniqueOfRiver</string>
    <string name="title_activity_navigation_drawer">TechniqueOfRiver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Role</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>
    //userprofile
    <string name="text_age">Age</string>
    <string name="text_location">Location</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_my_post">MY POSTS</string>
    <string name="text_years">years, </string>
    //login
    <string name="button_login">Login</string>
    <string name="text_or">OR</string>
    //home
    <string name="textview_fish">Fish</string>
    <string name="textview_weather">Weather</string>
    <string name="textview_water">Water</string>
    <string name="textview_boat">Boat</string>
    <string name="textview_others">Others</string>
    <string name="textview_approve_post_request">Approve Request</string>
    <string name="welcome">Welcome to Technique Of River\n</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_select_language">SelectLanguage</string>
    //selectlanguage
    <string name="radio_english">English</string>
    <string name="radio_bangala">বাংলা</string>
    //new post
    <string name="text_new_post">New Post</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="text_type">Type</string>
    <string name="textview_text_post">Say something...</string>
    <string name="textview_post_title">Title</string>
    <string name="text_something_went_wrong">Something went wrong..</string>
    <string name="text_content_details">Content details</string>
    <string name="text_latest_post">LATEST POSTS</string>
    <string name="text_radio_private">Share privately</string>
    <string name="text_radio_public">Share with everyone</string>
    <string name="text_who_can_see">Who can see?</string>
    //content details
    <string name="text_listen">Listen</string>
    <string name="text_title">Title</string>
    <string name="text_content">Content</string>
    <string name="text_delete">Delete</string>
    //recording
    <string name="text_record_voice">Record voice</string>
    <string name="button_upload">Upload</string>
    <string name="button_new_post">Create New Post</string>
    <string name="button_private_post">View Private Post</string>
    <string name="title_activity_fish">FishActivity</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="title_activity_water">WaterActivity</string>
    <string name="title_activity_boat">BoatActivity</string>
    <string name="title_activity_others">OthersActivity</string>
    //registerorlogin
    <string name="text_login_successful">Login successful</string>
    <string name="text_succesful_register">Successfully registered</string>
    //createPost
    <string name="text_succesful_post_create">Post created successfully</string>
    //content description
    <string name="contentfish">contentFish</string>
    <string name="contentothers">contentOthers</string>
    <string name="title_activity_list_item_detail">ListItemDetailActivity</string>
    <string name="title_activity_record_voice">RecordVoiceActivity</string>
    <string name="title_activity_choose_register_or_login">ChooseRegisterOrLoginActivity</string>
    <string name="text_username_required">Username required\n</string>
    <string name="text_password_required">Password required</string>
    <string name="text_welcome">Welcome</string>
    <string name="title_activity_private_post">PrivatePostActivity</string>
    <string name="title_activity_approve_post_request">ApprovePostRequestActivity</string>
    //privatepost
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_no_post">No post found</string>
    <string name="text_posted_by">Posted by </string>
    <string name="text_date">Date </string>
    //request access
    <string name="text_sent_request">Send request</string>
    <string name="text_send_request_for_access">Send request for access</string>
    <string name="text_request_access">Request access</string>
    //approve request
    <string name="text_approve_access">Approve for </string>
    <string name="text_reject_post">Reject for </string>
    <string name="text_request_approved">Request approved </string>
    <string name="text_request_rejected">Request rejected </string>
</resources>